retrieveUnpackaged/objects/RQS__c.object
<CustomObject>
    <fields>
        <fullName>Business_Requirement__c</fullName>
        <label>Business Requirement</label>
        <referenceTo>Business_Requirement__c</referenceTo>
        <relationshipLabel>Business Solutions</relationshipLabel>
        <relationshipName>RQS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Business_Solution__c</fullName>
        <label>Business Solution</label>
        <referenceTo>Business_Solution__c</referenceTo>
        <relationshipLabel>Business Requirements</relationshipLabel>
        <relationshipName>RQS</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requirement_Title__c</fullName>
        <formula>Business_Requirement__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement Title</label>
        <type>Text</type>
    </fields>
    <label>RQS</label>
    <nameField>
        <displayFormat>RQS-{000000}</displayFormat>
        <label>RQS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RQS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>